<resources>
    <string name="app_name">Compound Interest Calculator</string>
    <string name="interest_rate">Interest rate (yearly)</string>
    <string name="reg_add_hint">0.00</string>
    <string name="percent">%</string>
    <string name="dollar">$</string>
    <string name="years">year(s)</string>
    <string name="welcome">This app helps you calculate compound interest!\n\nYou might be surprised how a little investment and a lot of time can make you rich!</string>
    <string name="calculate">Calculate</string>
    <string name="initial_investment">Initial investment</string>
    <string name="regular_addition">Regular contribution (optional)</string>
    <string name="frequency">Frequency</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="years_to_grow">Years to grow</string>
    <string name="years_hint">0</string>
    <string name="i"> ? </string>
    <string name="hide_text"> </string>
    <string name="toast_empty_field">Please enter a value in each field, even if it\'s zero</string>
    <string name="result">Principal invested : %s\nInterest gained : %s\nTotal : %s</string>
    <string name="reset">Reset</string>


</resources>