<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Initial Investment EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/init_invest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/initial_investment"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="19dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Regular Contribution EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/regular_addition"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="19dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toStartOf="@+id/reset"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

        <!-- Result TextView -->
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hide_text"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/reset"
            app:layout_constraintTop_toBottomOf="@+id/calculate" />

        <!-- Interest Rate EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/interest_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/interest_rate"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="19dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/reg_add_freq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/yearly_radio"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <RadioButton
                android:id="@+id/weekly_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly" />

            <RadioButton
                android:id="@+id/monthly_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly" />

            <RadioButton
                android:id="@+id/yearly_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yearly" />

        </RadioGroup>

        <!-- Years To Grow EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/reg_add_freq"
            app:layout_constraintTop_toBottomOf="@+id/reg_add_freq">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/years_to_grow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/years_to_grow"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="19dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset"
            style="@style/Button.Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/burgir_orange"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintTop_toTopOf="@+id/calculate" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:srcCompat="@drawable/ic_initial_investment" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
            app:srcCompat="@drawable/ic_interest_rate" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
            app:srcCompat="@drawable/ic_contributions" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
            app:srcCompat="@drawable/ic_years_to_grow" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>